gcc/testsuite/algol68/compile/error-mode-stropping-6.a68
# { dg-options "-fstropping=upper" }  #
BEGIN PROC UNION (INT,REAL) j;
      j := "joo" { dg-error "CHAR.*PROC UNION \\( *REAL *, *INT *\\)" }
END
